--- a/src/partials/myindex.html
+++ b/src/partials/myindex.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
     <!-- <link rel="stylesheet" href="dist/notiflix-3.2.5.min.css" /> -->
   </head>
   <body>
-    <input type="text" id="search-box" />
     <form class="search-form" id="search-form">
         <input
           type="text"
@@ -19,6 +18,11 @@
         <button type="submit">Search</button>
       </form>
 
+      <div class="gallery">
+        <!-- Картки зображень -->
+      </div>
+
+      <button type="button" class="load-more">Load more</button>
     <script src="index.js" type="module"></script>
     <!-- <script src="dist/notiflix-3.2.5.min.js"></script> -->
   </body>
